refactor: 重命名目录 3-固件烧录 为 3-固件工具
- 目录重命名: 3-固件烧录  3-固件工具
- 更新所有相关文档中的路径引用
- 同步更新：需求文档、操作指南、开发记录等
- 保持所有工具功能正常运行

--- a/项目文档/1-需求与设计/烧录工具.md
+++ b/项目文档/1-需求与设计/烧录工具.md
@@ -1,4 +1,4 @@
-项目文档\3-固件烧录\01-AWRL6844_HelloWorld_完整烧录\5-Scripts\flash_tool.py
+项目文档\3-固件工具\01-AWRL6844固件系统工具\5-Scripts\flash_tool.py
 
 完善源代码, 做成gui应用程序功能如下:
 
@@ -13,7 +13,7 @@ v1.0.1
 1.启动时检查是否有老进程存在,并提醒是否关闭并开启新窗口.避免旧版窗口还未关闭,就可以直接新打开的窗口?
 
 2. 源固件可以选择, 另外设置一个打开目标目录的按钮
-3. 项目文档\3-固件烧录\01-AWRL6844固件系统工具\5-Scripts\flash_tool_gui.py与项目文档\3-固件烧录\01-AWRL6844固件系统工具\5-Scripts\flash_tool.py合并成一个gui 脚本,删除命令行脚本.
+3. 项目文档\3-固件工具\01-AWRL6844固件系统工具\5-Scripts\flash_tool_gui.py与项目文档\3-固件工具\01-AWRL6844固件系统工具\5-Scripts\flash_tool.py合并成一个gui 脚本,删除命令行脚本.
 4. 增加释放com3,com4端口功能,避免被其他应用占用
 
 v1.0.2
@@ -115,7 +115,7 @@ v1.2.0
 
 1. **左侧列表宽度没感觉又增加,设置成50/50, 并可以使用鼠标点左右中间线可自由调整比例.**
 2. **默认扫描路径 不要直接设置在app的脚本中, 可以默认这些官方目录没有问题,但也要可以随时删除,添加.**
-3. **HelloWorld**固件本来就是c:\ti 目录下的官方资料,D:\7.项目资料\Ti雷达项目\项目文档\3-固件烧录\01-AWRL6844固件系统工具这个目录不需要默认添加进去,因为它不是官方默认目录.为了强制搜索到**HelloWorld**固件而把自定义的固件目录添加进去是懒惰行为. 应该找一下为什么没有在c:\ti 没有搜索到**HelloWorld**固件具体原因.
+3. **HelloWorld**固件本来就是c:\ti 目录下的官方资料,D:\7.项目资料\Ti雷达项目\项目文档\3-固件工具\01-AWRL6844固件系统工具这个目录不需要默认添加进去,因为它不是官方默认目录.为了强制搜索到**HelloWorld**固件而把自定义的固件目录添加进去是懒惰行为. 应该找一下为什么没有在c:\ti 没有搜索到**HelloWorld**固件具体原因.
 4. 没有看到管理扫描路径, 与原来的界面一样,没变化.
 
 v1.2.2
@@ -160,11 +160,11 @@ v.1.2.6
 
 v1.2.8
 
-继续精简,删除项目文档\3-固件烧录\01-AWRL6844固件系统工具\5-Scripts\tabs\tab_firmware_lib.py 中无关的代码
+继续精简,删除项目文档\3-固件工具\01-AWRL6844固件系统工具\5-Scripts\tabs\tab_firmware_lib.py 中无关的代码
 
 V1.2.9
 
-项目文档\3-固件烧录\01-AWRL6844固件系统工具\5-Scripts\tabs\tab_firmware_lib.py 标签脚本中,只以固件.appimage为核心来收集固件项目, 去掉.bin
+项目文档\3-固件工具\01-AWRL6844固件系统工具\5-Scripts\tabs\tab_firmware_lib.py 标签脚本中,只以固件.appimage为核心来收集固件项目, 去掉.bin
 
 v1.3.0
 
