--- a/项目文档/2-开发记录/2025-12-15/修复执行计划-2025-12-15.md
+++ b/项目文档/2-开发记录/2025-12-15/修复执行计划-2025-12-15.md
@@ -475,21 +475,21 @@ Write-Host "检查文档修复情况..." -ForegroundColor Cyan
 $errors = 0
 
 # 检查1: 不应出现buildImage_creator（除了工具说明）
-$buildImageCount = (Select-String -Path "项目文档\3-固件烧录\**\*.md" -Pattern "buildImage_creator" -Exclude "3-Tools\README.md").Count
+$buildImageCount = (Select-String -Path "项目文档\3-固件工具\**\*.md" -Pattern "buildImage_creator" -Exclude "3-Tools\README.md").Count
 if ($buildImageCount -gt 0) {
     Write-Host "[错误] 仍有 $buildImageCount 处提到 buildImage_creator（工具说明除外）" -ForegroundColor Red
     $errors++
 }
 
 # 检查2: 不应出现metaImage_creator（除了工具说明）
-$metaImageCount = (Select-String -Path "项目文档\3-固件烧录\**\*.md" -Pattern "metaImage_creator" -Exclude "3-Tools\README.md").Count
+$metaImageCount = (Select-String -Path "项目文档\3-固件工具\**\*.md" -Pattern "metaImage_creator" -Exclude "3-Tools\README.md").Count
 if ($metaImageCount -gt 0) {
     Write-Host "[错误] 仍有 $metaImageCount 处提到 metaImage_creator（工具说明除外）" -ForegroundColor Red
     $errors++
 }
 
 # 检查3: arprog命令格式
-$wrongArprog = Select-String -Path "项目文档\3-固件烧录\**\*.{md,bat}" -Pattern "arprog.*-o\s+0x"
+$wrongArprog = Select-String -Path "项目文档\3-固件工具\**\*.{md,bat}" -Pattern "arprog.*-o\s+0x"
 if ($wrongArprog) {
     Write-Host "[错误] 发现使用 -o 参数的旧格式命令" -ForegroundColor Red
     $wrongArprog | ForEach-Object { Write-Host "  $($_.Filename):$($_.LineNumber)" }
@@ -497,17 +497,17 @@ if ($wrongArprog) {
 }
 
 # 检查4: 确认使用 -cf 或 -of1
-$correctArprog = Select-String -Path "项目文档\3-固件烧录\**\*.bat" -Pattern "arprog.*(-cf|-of1)"
+$correctArprog = Select-String -Path "项目文档\3-固件工具\**\*.bat" -Pattern "arprog.*(-cf|-of1)"
 if (-not $correctArprog) {
     Write-Host "[警告] 未找到使用 -cf 或 -of1 的命令" -ForegroundColor Yellow
 }
 
 # 检查5: 脚本文件不应存在
-if (Test-Path "项目文档\3-固件烧录\*\5-Scripts\1_generate_sbl_meta.bat") {
+if (Test-Path "项目文档\3-固件工具\*\5-Scripts\1_generate_sbl_meta.bat") {
     Write-Host "[错误] 1_generate_sbl_meta.bat 应该被删除" -ForegroundColor Red
     $errors++
 }
-if (Test-Path "项目文档\3-固件烧录\*\5-Scripts\2_generate_app_meta.bat") {
+if (Test-Path "项目文档\3-固件工具\*\5-Scripts\2_generate_app_meta.bat") {
     Write-Host "[错误] 2_generate_app_meta.bat 应该被删除" -ForegroundColor Red
     $errors++
 }
