--- a/项目文档/2-开发记录/2025-12-15/错误对比分析-2025-12-15.md
+++ b/项目文档/2-开发记录/2025-12-15/错误对比分析-2025-12-15.md
@@ -2,7 +2,7 @@
 
 **分析日期**: 2025-12-15  
 **对比基准**: 官方SDK文档 + sbl.h源码  
-**错误目录**: `项目文档/3-固件烧录/01-AWRL6844固件系统工具/`
+**错误目录**: `项目文档/3-固件工具/01-AWRL6844固件系统工具/`
 
 ---
 
