refactor: 移动固件智能管理系统到固件工具目录
- 移动 project-code/code_search  项目文档/3-固件工具/02-固件智能管理系统
- 重命名目录为中文名称，便于理解
- 保留所有文件：匹配器、GUI、文档、测试脚本
- 目录结构更合理，与01-AWRL6844固件系统工具并列

--- a/项目文档/1-需求与设计/烧录工具.md
+++ b/项目文档/1-需求与设计/烧录工具.md
@@ -199,3 +199,18 @@ v1.3.3
 0.更新完脚本后,更新主程序的版本号. 然后打开主APP,检查更行界面及功能.
 
 1. 删除固件库标签,并删除对应的脚本文件
+
+
+v1.3.4
+
+0.更新完脚本后,更新主程序的版本号. 然后打开主APP,检查更行界面及功能.
+
+1. 建立一个空白标签,名字为:固件管理
+
+
+
+v1.3.5
+
+0.更新完脚本后,更新主程序的版本号. 然后打开主APP,检查更行界面及功能.
+
+1. 将D:\7.项目资料\Ti雷达项目\project-code\code_search 系统集成到D:\7.项目资料\Ti雷达项目\项目文档\3-固件工具\01-AWRL6844固件系统工具的 固体管理 标签页.
