fix(v1.5.0): 修正端口功能说明 - COM3为烧录端口，COM4为雷达数据输出端口
- 更新flash_tool.py端口配置注释
- 更新操作指南.md端口说明
- 更新5-Scripts/README.md端口功能描述
- 更新主README.md常见问题
- 基于实测验证：COM3可烧录，COM4用于雷达数据输出
- 版本号升级到v1.5.0

--- a/项目文档/3-固件工具/01-AWRL6844固件系统工具/操作指南.md
+++ b/项目文档/3-固件工具/01-AWRL6844固件系统工具/操作指南.md
@@ -85,8 +85,8 @@ Get-ChildItem "2-HelloWorld_App\hello_world_system.release.appimage" | Format-Ta
 方法1 - 设备管理器：
 1. Win+X → 设备管理器
 2. 展开"端口(COM和LPT)"
-3. 查找 `XDS110 Class Application/User UART (COM3)` ← **烧录用这个**
-4. 另有 `XDS110 Class Auxiliary Data Port (COM4)` ← 调试日志用
+3. 查找 `XDS110 Class Application/User UART (COM3)` ← **烧录端口（实测验证）**
+4. 另有 `XDS110 Class Auxiliary Data Port (COM4)` ← **雷达数据输出端口（实测验证）**
 
 方法2 - PowerShell命令：
 ```powershell
@@ -97,9 +97,15 @@ Get-WmiObject Win32_SerialPort | Select-Object DeviceID, Description
 ```
 DeviceID  Description
 --------  -----------
-COM3      XDS110 Class Application/User UART    ← 烧录用
-COM4      XDS110 Class Auxiliary Data Port      ← 日志用
+COM3      XDS110 Class Application/User UART    ← 烧录端口（实测可用）
+COM4      XDS110 Class Auxiliary Data Port      ← 雷达数据输出端口
 ```
+
+> **⚠️ 重要提示（实测结果）**：
+> - **COM3 (User UART)** 用于固件烧录 ✅
+> - **COM4 (Auxiliary Data Port)** 用于雷达数据输出（如点云数据、检测结果等）✅
+> - 端口号（COM3/COM4）可能因系统而异，以设备管理器显示为准
+> - 烧录时必须选择 `XDS110 Class Application/User UART` 类型的端口
 
 ---
 
@@ -323,9 +329,14 @@ All tests have passed!!
 **解决方案**：
 1. 确认SOP开关改为SOP_MODE2 (SOP0=OFF, SOP1=ON)
 2. 确认串口终端配置：115200 8N1
-3. 确认COM端口正确（烧录用COM3，可能调试输出在COM4）
+3. 确认COM端口正确（烧录使用COM3，数据输出查看COM4）
 4. 按RESET按钮重新启动
 5. 重新烧录固件
+
+> **注意**：
+> - 烧录操作使用COM3（User UART端口）
+> - 雷达数据输出在COM4（Auxiliary Data Port）
+> - HelloWorld程序的串口输出可能在COM3或COM4，具体取决于程序配置
 
 ---
 
