fix: v1.6.1 修复烧录功能 - 添加-p参数指定端口
问题：
- 完整烧录、仅SBL、仅App三种烧录方式均无法使用
- 错误信息：arprog_cmdline_6844.exe: error: the following arguments are required: -p/--port

解决方案：
- 修复所有三个烧录方法的命令格式
- 正确格式：tool_exe -p port offset image
- 错误格式：tool_exe port offset image

修改文件：
- flash_tool.py: _flash_firmware_thread() - 完整烧录的SBL和App命令
- flash_tool.py: _flash_sbl_thread() - 仅SBL烧录命令
- flash_tool.py: _flash_app_thread() - 仅App烧录命令
- 更新版本号到v1.6.1

--- a/项目文档/1-需求与设计/烧录工具.md
+++ b/项目文档/1-需求与设计/烧录工具.md
@@ -200,17 +200,291 @@ v1.3.3
 
 1. 删除固件库标签,并删除对应的脚本文件
 
-
 v1.3.4
 
 0.更新完脚本后,更新主程序的版本号. 然后打开主APP,检查更行界面及功能.
 
 1. 建立一个空白标签,名字为:固件管理
 
-
-
 v1.3.5
 
 0.更新完脚本后,更新主程序的版本号. 然后打开主APP,检查更行界面及功能.
 
 1. 将D:\7.项目资料\Ti雷达项目\project-code\code_search 系统集成到D:\7.项目资料\Ti雷达项目\项目文档\3-固件工具\01-AWRL6844固件系统工具的 固体管理 标签页.
+
+项目文档\3-固件工具\01-AWRL6844固件系统工具
+
+v1.3.6
+
+0.更新完脚本后,更新主程序的版本号. 然后打开主APP,检查更行界面及功能.
+
+1. 集成的固体管理 标签页 缺少了扫描目录管理. 填补上去
+
+项目文档\3-固件工具\01-AWRL6844固件系统工具
+
+v1.3.7
+
+0.更新完脚本后,更新主程序的版本号. 然后打开主APP,检查更行界面及功能
+
+1.固体管理 标签页bug修复列表:
+
+1.1 删除扫描控制框中 扫描目录,添加,删除 功能, 因为与 扫描目录子标签 功能重复.
+
+1.2 多次扫描目录,  扫描出的文件不不断累积重复, 修复它.
+
+项目文档\3-固件工具\01-AWRL6844固件系统工具
+
+v1.3.8
+
+0.更新完脚本后,更新主程序的版本号. 然后打开主APP,检查更行界面及功能
+
+1.固体管理 标签页bug修复列表:
+
+1.2 清空所有后, 扫描目录列表依然存在.
+
+1.3  +添加目录功能无效
+
+1.4 -删除功能无效
+
+项目文档\3-固件工具\01-AWRL6844固件系统工具
+
+v1.3.9
+
+0.更新完脚本后,更新主程序的版本号. 然后打开主APP,检查更行界面及功能
+
+1. 标签页 固件管理-应用固件: 详细信息框 太小,无法一次性完全显示内容. 把框设置成自适应. 另外框可以使用鼠标调整
+2. 标签页 固件管理-SBL固件: 详细信息框 太小,无法一次性完全显示内容. 把框设置成自适应. 另外框可以使用鼠标调整
+3. 标签页 固件管理-雷达配置: 详细信息框 太小,无法一次性完全显示内容. 把框设置成自适应. 另外框可以使用鼠标调整
+4. 所有的标签页中的文件名及路径 实现可以复制功能.
+
+项目文档\3-固件工具\01-AWRL6844固件系统工具
+
+v1.4.0
+
+0.更新完脚本后,更新主程序的版本号. 然后打开主APP,检查更行界面及功能
+
+1. bug修复:  1.1 只需要复制所有的标签页中的文件名及路径 ,不需要实现复制行与所有数据
+
+项目文档\3-固件工具\01-AWRL6844固件系统工具
+
+v1.4.1
+
+0.更新完脚本后,更新主程序的版本号. 同步更新github 本地与远程. 然后打开主APP,检查更行界面及功能
+
+1.标签页 固件管理-智能匹配 功能增加:
+
+1.1 .增加搜索应用固件功能.
+
+1.2  增加一键添加烧录文件功能, 将选中标签页 固件管理-智能匹配中选中的应用固件 及SBL固件的绝对路径添加到 到基本烧录 主标签页的SBL固件及app固件中.
+
+v1.4.2
+
+0.更新完脚本后,更新主程序的版本号. 同步更新github 本地与远程. 然后打开主APP,检查更行界面及功能
+
+1.标签页 基本烧录中:
+
+1.1 烧录工具未找到? 修复它
+
+1.2 打开目录功能 及分析功能是做扫描的呢?
+
+项目文档\3-固件工具\01-AWRL6844固件系统工具 v1.4.3
+
+0.更新完脚本后,更新主程序的版本号. 同步更新github 本地与远程. 然后打开主APP,检查更行界面及功能
+
+1. 整个APP只处理.appimage格式的固件,不处理.bin的固件.全部更新.
+2. 标签页 基本烧录-固件文件中:
+   2.1 烧录工具中显示烧录工具的绝对路径
+   2.2 去掉打开目录功能 并删除相关代码
+   2.3 打开分析功能按钮为什么会是选择固件的文件? 改为 直接分析已选择的SBL固件及APP应用固件. 如果没有固件被选择, 请将提示显示结果显示在右边日志中, 如果有分析结果,也显示在右边日志
+3. 标签页 基本烧录-端口设置中:
+   3.1 刷新功能中, 点击刷新,要显示结果提示, 如果有刷新到,显示正确的结果. 如果没有, 显示没有刷新到端口的提醒
+   3.2 点测试没有任何响应,是为什么呢?
+   3.3 我有两个显示器, 我点开检测SBL弹出的窗口与我的主窗口不在一个显示器内,并且窗口也不可移动.也不能正常.修复BUG.
+
+项目文档\3-固件工具\01-AWRL6844固件系统工具 v1.4.4
+
+0.更新完脚本后,更新主程序的版本号. 同步更新github 本地与远程. 然后打开主APP,检查更行界面及功能
+
+1.标签页 基本烧录-固件文件bug: 虽然已有sbl固件及APP固件被选择,但点击分析已选固件, 日志中仍然显示请选择固件文件. 更别说有分析结果显示在日志中了.
+
+2.标签页 基本烧录-端口设置  :
+
+2.1 bug:弹出的SBL存在性检测窗口无法关闭.
+
+2.2: 将 检测SBL 按钮更改名字改为  板载SLB存在性检测
+
+项目文档\3-固件工具\01-AWRL6844固件系统工具 v1.4.5
+
+0.更新完脚本后,更新主程序的版本号. 同步更新github 本地与远程. 然后打开主APP,检查更行界面及功能
+
+1.标签页 基本烧录-固件文件bug: 虽然已有sbl固件及APP固件被选择,但点击分析已选固件, 日志中仍然显示请选择固件文件. 更别说有分析结果显示在日志中了. 这个bug还没有被修复. 已经修复过一次,但还是没有被修复,彻底找到问题并修复他
+
+2.标签页 基本烧录-端口设置  :
+
+2.1刷新功能中, 点击刷新,要显示结果提示, 如果有刷新到,显示正确的结果.并且要详细的COM口信息,不止是要结果.
+
+3. 在SBL及APP固已被选择的情况下,点击完整烧录按钮,显示错误弹窗:请先选择有效的固件文件.
+
+项目文档\3-固件工具\01-AWRL6844固件系统工具 v1.4.6
+
+0.更新完脚本后,更新主程序的版本号. 同步更新github 本地与远程. 然后打开主APP,检查更行界面及功能
+
+1.标签页 基本烧录-固件文件bug: 虽然已有sbl固件及APP固件被选择,但点击分析已选固件, 日志中仍然显示请选择固件文件. 更别说有分析结果显示在日志中了. 这个bug还没有被修复. 已经修复过一次,但还是没有被修复,彻底找到问题并修复他.已经是第三次修复了.操你妈
+
+项目文档\3-固件工具\01-AWRL6844固件系统工具 v1.4.7
+
+0.更新完脚本后,更新主程序的版本号. 同步更新github 本地与远程. 然后打开主APP,检查更行界面及功能
+
+1.标签页 基本烧录  改名为烧录功能. 同步更新相关文件.
+
+2. 将标签页 高级功能全部集成到标签页内 烧录功能 中,并删除高级功能标签页 及相关文件. 所有输出结果全部显示在日志中.
+3. 将标签页 串口监视 及端口管理功能 全部集成到标签页内 烧录功能 中,并删除串口监视 及端口管理,标签页 及相关文件. 所有输出结果全部显示在日志中.
+
+项目文档\3-固件工具\01-AWRL6844固件系统工具 v1.4.8
+
+0.更新完脚本后,更新主程序的版本号. 同步更新github 本地与远程. 然后打开主APP,检查更行界面及功能
+
+1.全面深入学习D:\7.项目资料\Ti雷达项目\知识库及ti 官方网络资料,及D:\7.项目资料\Ti雷达项目\项目文档\2-开发记录\2025-12-12\2025-12-12_SOP配置修正说明.md
+
+2. 根据学到的然后验证测试D:\7.项目资料\Ti雷达项目\项目文档\3-固件工具\01-AWRL6844固件系统工具 项目, 让其正常工作. 并保证输出的日志全部正确并详细.
+
+项目文档\3-固件工具\01-AWRL6844固件系统工具 v1.4.9
+
+0.更新完脚本后,更新主程序的版本号. 同步更新github 本地与远程. 然后打开主APP,检查更行界面及功能
+
+1.标签页 烧录功能 -固件文件- 烧录工具:
+
+1.1 增加烧录工具  可以选择文件功能,并将选择的绝对路径 显示在下面
+
+1.2  该项目文档\3-固件工具\01-AWRL6844固件系统工具\3-Tools 是APP内的工具, 选为默认,并且可以随着01-AWRL6844固件系统工具目录改变,可以及时改变.  另外增加c:\ti\MMwAVE_L_SDK_e6_01_ee_01\tools\FlashingTool\arprog_cmdline_6844.exe 为可选择项
+
+2.标签页 烧录功能-端口设置中的烧录端口,与调试端口不正确吧? 为什么烧录端口(COM3):COM4  调试端口(COM4):COM4  ? 这是说明原理???
+
+3. 标签页 固件管理-智能匹配 中的 一键添加加基本烧录 按钮 不明显,  让其突出明显,一眼就可以看得到
+
+项目文档\3-固件工具\01-AWRL6844固件系统工具 v1.5.0
+
+0.更新完脚本后,更新主程序的版本号. 同步更新github 本地与远程. 然后打开主APP,检查更行界面及功能
+
+1.标签页 烧录功能-端口设置中的烧录端口 修正:
+
+| 端口           | 类型                               | 功能                   | 说明                                 |
+| -------------- | ---------------------------------- | ---------------------- | ------------------------------------ |
+| **COM3** | XDS110 Class Application/User UART | **烧录端口**     | 用于固件烧录（实测可用）             |
+| **COM4** | XDS110 Class Auxiliary Data Port   | **雷达数据输出** | 用于雷达数据输出（点云、检测结果等） |
+
+项目文档\3-固件工具\01-AWRL6844固件系统工具 v1.5.1
+
+0.更新完脚本后,更新主程序的版本号. 同步更新github 本地与远程. 然后打开主APP,检查更行界面及功能
+
+1.标签页 烧录功能 -固件文件- 烧录工具:
+
+1.1 增加烧录工具  可以选择文件功能,并将选择的绝对路径 显示在下面
+
+1.2  该项目文档\3-固件工具\01-AWRL6844固件系统工具\3-Tools 是APP内的工具, 选为默认,并且可以随着01-AWRL6844固件系统工具目录改变,可以及时改变.  另外增加c:\ti\MMwAVE_L_SDK_e6_01_ee_01\tools\FlashingTool\arprog_cmdline_6844.exe 为可选择项
+
+项目文档\3-固件工具\01-AWRL6844固件系统工具 v1.5.2
+
+0.更新完脚本后,更新主程序的版本号. 同步更新github 本地与远程. 然后打开主APP,检查更行界面及功能
+
+1.标签页 烧录功能 -固件文件- 烧录工具:
+
+1.1 原功能不能改变.增加烧录工具  可以选择文件功能,并将选择的绝对路径 显示在下面
+
+项目文档\3-固件工具\01-AWRL6844固件系统工具 v1.5.3
+
+0.更新完脚本后,更新主程序的版本号. 同步更新github 本地与远程. 然后打开主APP,检查更行界面及功能
+
+1.标签页 烧录功能 -固件文件:
+
+1.1 SBL固件: app启动时, 默认为D:\7.项目资料\Ti雷达项目\项目文档\3-固件工具\01-AWRL6844固件系统工具\1-SBL_Bootloader\sbl.release.appimage.   并保证D:\7.项目资料\Ti雷达项目\项目文档\3-固件工具\01-AWRL6844固件系统工具 目录到任意目录, 均可以启动自动调出默认固件路径.
+
+1.2 app固件:app启动时, 默认为D:\7.项目资料\Ti雷达项目\项目文档\3-固件工具\01-AWRL6844固件系统工具\2-HelloWorld_App\hello_world_system.release.appimage.   并保证D:\7.项目资料\Ti雷达项目\项目文档\3-固件工具\01-AWRL6844固件系统工具 目录到任意目录, 均可以启动自动调出默认固件路径.
+
+1.3 实现SBL固件,APP固件启动时默认加载呀
+
+项目文档\3-固件工具\01-AWRL6844固件系统工具 v1.5.4
+
+0.更新完脚本后,更新主程序的版本号. 同步更新github 本地与远程. 然后打开主APP,检查更行界面及功能
+
+1..标签页 烧录功能 左边框增加10%, 烧录日志框减少10%.  左右边框中间可以使用鼠标任何分割比例.
+
+项目文档\3-固件工具\01-AWRL6844固件系统工具 v1.5.5
+
+0.更新完脚本后,更新主程序的版本号. 同步更新github 本地与远程. 然后打开主APP,检查更行界面及功能
+
+1.标签页 烧录功能-端口设置, 测试为什么只有COM3结果. 将相关的所有端口均要有测试结果.
+
+![1766109025292](image/烧录工具/1766109025292.png)
+
+项目文档\3-固件工具\01-AWRL6844固件系统工具 v1.5.6
+
+0.更新完脚本后,更新主程序的版本号. 同步更新github 本地与远程. 然后打开主APP,检查更行界面及功能
+
+1.标签页 烧录功能:端口设置,端口管理,串口监视 三个子标签合并为端口管理.合并后放在烧录操作下面
+
+2.标签页 烧录功能: 烧录操作,高级设置合并为烧录操作, 将烧录超时放在完整烧录上面
+
+3.释放端口功能无效,修正它
+
+
+
+
+项目文档\3-固件工具\01-AWRL6844固件系统工具 v1.5.7
+
+0.更新完脚本后,更新主程序的版本号. 同步更新github 本地与远程. 然后打开主APP,检查更行界面及功能
+
+ 1 标签页 烧录功能:端口设置,端口管理子标签合并为端口管理.合并后放在烧录操作下面
+
+
+
+项目文档\3-固件工具\01-AWRL6844固件系统工具 v1.5.8
+
+0.更新完脚本后,更新主程序的版本号. 同步更新github 本地与远程. 然后打开主APP,检查更行界面及功能
+
+1. 1.标签页 烧录功能 -固件文件: 里面的内容要随着鼠标左右拉扯界面而自适应,而不是固定
+
+
+
+项目文档\3-固件工具\01-AWRL6844固件系统工具 v1.5.9
+
+0.更新完脚本后,更新主程序的版本号. 同步更新github 本地与远程. 然后打开主APP,检查更行界面及功能
+
+1. 标签页 烧录功能-端口管理 中的释放端口功能:
+   1.1 只释放选中的管理端口
+   1.2  释放端口时只释放所选的端口的占用,但不能关闭应用.
+
+
+项目文档\3-固件工具\01-AWRL6844固件系统工具 v1.6.0
+
+0.更新完脚本后,更新主程序的版本号. 同步更新github 本地与远程. 然后打开主APP,检查更行界面及功能
+
+1. 标签页 烧录功能 页面 将初始左边与右边边框默认启动时比例为3:7.
+2. 删除端口管理中监视COM3,监视COM4,监视COM4,管理端口,测试端口,释放端口功能. 保留烧录端口,数据输出端口,刷新,测试,SBL检测功能.并将SBL检测更名为板载SBL固件存在性检测. 另外将板载SBL固件存在性检测按钮另起一行
+
+
+
+
+项目文档\3-固件工具\01-AWRL6844固件系统工具 v1.6.1
+
+0.更新完脚本后,更新主程序的版本号. 同步更新github 本地与远程. 然后打开主APP,检查更行界面及功能
+
+1.标签页 烧录功能-烧录操作 中 
+
+1.1完整烧录流程（SBL + App）无法正常烧录,见截图
+
+![1766112841665](image/烧录工具/1766112841665.png)
+
+
+1.2 仅 SBL与仅APP 无法正常烧录,同样的错误见截图
+
+![1766112917629](image/烧录工具/1766112917629.png)
+
+
+
+
+项目文档\3-固件工具\01-AWRL6844固件系统工具 v1.6.2
+
+0.更新完脚本后,更新主程序的版本号. 同步更新github 本地与远程. 然后打开主APP,检查更行界面及功能
+
+1.标签页 烧录功能-烧录操作 中
