docs: 重写文档回归主题 - 聚焦Flash配置读取功能
🎯 核心修正：
- 文档主题回归：支持Flash配置读取的固件（不是所有固件列表）
- 明确功能定义：什么是Flash配置读取、应用场景、与UART CLI的区别

✅ 确认支持的固件：
1. InCabin Demo (demo_in_cabin_sensing_6844_system.release.appimage)
   - 校准数据Flash存储
   - 配置参数持久化
   - 独立部署模式（无需PC）
   - 配套配置文件：cpd.cfg、sbr.cfg、intrusion_detection.cfg等

❌ 不支持AWRL6844的参考固件：
- Parking Garage Sensor (仅xWR68xx，.bin格式)
- 但可参考其Flash CLI命令设计

📋 文档结构：
1. Flash配置读取功能说明
2. 支持的AWRL6844固件详情（InCabin Demo）
3. 配套配置文件清单（.cfg文件）
4. Flash CLI命令示例（部分待验证）
5. 推荐工作流程（开发部署生产）
6. 待研究问题清单

🔍 待验证内容：
- InCabin Demo的具体Flash CLI命令
- Flash存储区域地址映射
- 配置数据格式
- UniFlash预烧录方法

📚 文档价值：
- 明确区分支持Flash的固件（1个）vs 所有固件（153+）
- 提供配置文件路径和说明
- 给出完整的开发部署流程
- 标注待验证内容，避免误导

--- a/项目文档/3-固件工具/01-AWRL6844固件系统工具/支持雷达配置读取的固件列表.md
+++ b/项目文档/3-固件工具/01-AWRL6844固件系统工具/支持雷达配置读取的固件列表.md
@@ -1,492 +1,346 @@
-# 🔍 TI mmWave 雷达 AWRL6844 固件资源列表
+# 🔍 支持Flash配置读取的AWRL6844固件详细资料
 
 > **最后更新**: 2025-12-20  
-> **固件来源**: `C:\ti` 目录全盘扫描
+> **文档目的**: 列出支持从Flash读取配置参数的固件及其配套配置文件
 
 ---
 
-## 📋 概述
+## 📋 什么是Flash配置读取？
 
-### 🎯 AWRL6844 固件识别方法
+### 功能说明
 
-在 `C:\ti` 目录中，**所有包含以下标识的固件均支持 AWRL6844**：
+大多数TI mmWave雷达Demo固件通过**UART CLI实时配置**，每次启动都需要PC发送配置命令。
 
-- ✅ 路径包含 **`xwrL684x-evm`**
-- ✅ 文件名包含 **`6844`** 或 **`L6844`**
-- ✅ 文件格式为 **`.appimage`**
+**Flash配置读取**功能允许：
+- ✅ 将雷达配置参数存储到Flash存储器
+- ✅ 将环境校准数据存储到Flash
+- ✅ 雷达启动时自动从Flash加载配置
+- ✅ **独立部署模式**（无需PC即可运行）
 
-**例如**：
-```
-C:\ti\MMWAVE_L_SDK_06_01_00_01\examples\mmw_demo\mmwave_demo\xwrL684x-evm\...
-C:\ti\radar_toolbox_3_30_00_06\source\ti\examples\...\L6844\...
-```
+### 应用场景
 
-### 固件格式说明
-
-| 格式 | 适用型号 | AWRL6844支持 |
-|------|----------|--------------|
-| **`.appimage`** | xWRL6xxx 系列 (AWRL6844, AWRL6432, IWRL6843) | ✅ **是** |
-| **`.bin`** | xWR18xx, xWR68xx 系列 | ❌ 否 |
+| 场景 | 说明 |
+|------|------|
+| **生产部署** | 设备出厂前烧录配置，客户现场无需配置 |
+| **背景校准** | 保存环境噪声基线，跨电源周期保持 |
+| **嵌入式系统** | 无PC环境下的独立雷达系统 |
+| **快速启动** | 避免每次启动都发送配置命令 |
 
 ---
 
-## 🎯 推荐固件（开箱即用）
+## ⭐ 支持Flash配置读取的AWRL6844固件
 
-### 1️⃣ **mmWave Demo（官方演示）** ⭐ 最推荐
+### 1️⃣ InCabin Demo（车内检测）✅ 主要推荐
 
-**功能**: 通用雷达演示、目标检测、点云输出
+#### 📊 基本信息
 
-**文件路径**：
-```
-C:\ti\MMWAVE_L_SDK_06_01_00_01\examples\mmw_demo\mmwave_demo\
-├── prebuilt_binaries\xwrL684x-evm\mmwave_demo.release.appimage ✅ 预编译
-└── xwrL684x-evm\r5fss0-0_freertos\ti-arm-clang\mmwave_demo.release.appimage ✅ 源码编译
+| 项目 | 内容 |
+|------|------|
+| **固件名称** | AWRL6844 InCabin Sensing Demo |
+| **固件文件** | `demo_in_cabin_sensing_6844_system.release.appimage` |
+| **支持型号** | AWRL6844 |
+| **应用场景** | 车内乘员检测、生命体征监测、儿童遗留检测 |
+| **SDK来源** | Radar Toolbox 3.30.00.06 |
 
-备用路径（Radar Toolbox）：
-C:\ti\radar_toolbox_3_30_00_06\tools\Adc_Data_Capture_Tool_DCA1000_CLI\prebuilt_binaries\
-└── xWRL6844_mmwave_demo.release.appimage ✅
-```
+#### 📂 固件路径
 
-**特点**：
-- ✅ TI官方标准Demo
-- ✅ 功能全面：3D点云、范围-多普勒图
-- ✅ 文档完善
-- ✅ 多个版本可选
-
----
-
-### 2️⃣ **InCabin Demo（车内检测）** ⭐ 支持Flash配置
-
-**功能**: 车内乘员检测、生命体征监测
-
-**文件路径**：
 ```
 C:\ti\radar_toolbox_3_30_00_06\source\ti\examples\
 └── Automotive_InCabin_Security_and_Safety\AWRL6844_InCabin_Demos\
-    └── prebuilt_binaries\demo_in_cabin_sensing_6844_system.release.appimage ✅
+    ├── prebuilt_binaries\
+    │   └── demo_in_cabin_sensing_6844_system.release.appimage ✅ 固件
+    └── docs\
+        └── AWRL6844_InCabin_Demos_User_Guide.html
 ```
 
-**特点**：
-- ✅ **支持Flash配置读取**（校准数据、参数持久化）
-- ✅ 支持独立部署（烧录后无需PC）
-- ✅ 专为车内应用优化
+**知识库路径**：
+```
+D:\7.项目资料\Ti雷达项目\知识库\雷达模块\RADAR-TOOLBOX\radar_toolbox_3_30_00_06\
+└── source\ti\examples\Automotive_InCabin_Security_and_Safety\AWRL6844_InCabin_Demos\
+```
+
+#### 🔧 Flash配置功能
+
+##### 支持的Flash操作
+
+| 功能 | 说明 |
+|------|------|
+| **校准数据存储** | 环境噪声基线、背景场景数据 |
+| **配置参数持久化** | 检测阈值、算法参数 |
+| **独立部署模式** | 烧录后可脱离PC独立运行 |
+| **跨电源周期保持** | 断电后数据不丢失 |
+
+##### Flash相关CLI命令
+
+**⚠️ 待验证**：需要查看固件文档确认具体CLI命令
+
+```bash
+# 示例命令格式（需验证）
+flashWrite <address> <size> <data>
+flashRead <address> <size>
+saveCalibration
+loadCalibration
+```
+
+#### 📝 配套配置文件
+
+##### GUI工具配置文件
+
+```
+C:\ti\radar_toolbox_3_30_00_06\tools\visualizers\AWRL6844_Incabin_GUI\
+└── src\chirpConfigs6844\
+    ├── cpd.cfg                          ✅ 儿童存在检测配置
+    ├── sbr.cfg                          ✅ 安全带提醒配置
+    ├── intrusion_detection.cfg          ✅ 入侵检测配置
+    └── intrusion_detection_LP.cfg       ✅ 入侵检测低功耗配置
+```
+
+##### 标准Demo配置文件
+
+```
+C:\ti\radar_toolbox_3_30_00_06\tools\
+├── Adc_Data_Capture_Tool_DCA1000_CLI\chirp_configs\
+│   └── xWRL6844_4T4R_tdm.cfg           ✅ 4T4R TDM配置
+└── mmwave_data_recorder\src\cfg\
+    └── 6844_profile_4T4R_tdm.cfg       ✅ 数据记录器配置
+```
+
+#### 📖 使用指南
+
+##### 1. 烧录固件
+
+```bash
+# 使用UniFlash或项目烧录工具
+# 烧录 demo_in_cabin_sensing_6844_system.release.appimage
+```
+
+##### 2. 配置雷达（首次）
+
+通过UART CLI发送配置命令（使用上述.cfg文件）
+
+##### 3. 保存配置到Flash
+
+```bash
+# 使用固件提供的CLI命令保存配置
+# 具体命令需参考固件文档
+```
+
+##### 4. 验证独立运行
+
+- 断开PC连接
+- 重新上电
+- 雷达应自动从Flash加载配置并开始工作
+
+#### 📚 相关文档
+
+| 文档 | 路径 |
+|------|------|
+| **用户指南** | `AWRL6844_InCabin_Demos\docs\AWRL6844_InCabin_Demos_User_Guide.html` |
+| **Flash操作说明** | 需在用户指南中查找 |
+| **CLI命令参考** | 需在用户指南中查找 |
 
 ---
 
-### 3️⃣ **CAN Integration（CAN总线集成）**
+## ⚠️ 不支持AWRL6844的Flash配置固件（参考）
 
-**功能**: 通过CAN总线输出雷达数据
+### Parking Garage Sensor（仅xWR68xx）
 
-**文件路径**：
+虽然此固件支持Flash配置读取功能，但**不适用于AWRL6844**。
+
+#### 基本信息
+
+| 项目 | 内容 |
+|------|------|
+| **固件名称** | Parking Garage Sensor |
+| **固件文件** | `parking_garage_sensor_68xx_demo_isk.bin` (⚠️ .bin格式) |
+| **支持型号** | AWR6843 / xWR68xx系列 ❌ 不支持AWRL6844 |
+| **固件格式** | `.bin` (AWRL6844使用`.appimage`) |
+
+#### Flash配置文件（仅供参考）
+
 ```
-C:\ti\radar_toolbox_3_30_00_06\source\ti\examples\Fundamentals\CAN_Data_Output\CAN_Integration\
-└── prebuilt_binaries\can_integration_example_L6844.appimage ✅
+知识库/雷达模块/RADAR-TOOLBOX/radar_toolbox_3_30_00_06/source/ti/examples/
+└── Industrial_and_Personal_Electronics/Parking_Garage_Sensor/
+    └── chirp_configs/
+        ├── parking_garage_sensor_68xx_ISK_setFlashRecord.cfg  📝 写入Flash配置
+        └── parking_garage_sensor_68xx_ISK_getFlashRecord.cfg  📝 读取Flash配置
 ```
+
+#### Flash CLI命令示例（参考）
+
+```bash
+# 保存配置到Flash（仅xWR68xx）
+setFlashRecord <record_type> <data>
+
+# 从Flash读取配置（仅xWR68xx）
+getFlashRecord <record_type>
+```
+
+**说明**：这些命令仅供参考AWRL6844可能的实现方式，具体命令需查看InCabin Demo文档。
 
 ---
 
-## 📚 完整固件清单（按类别）
+## 🔍 如何确认固件支持Flash配置？
 
-### 🔧 驱动示例固件 (Drivers)
+### 检查方法
 
-**基础路径**: `C:\ti\MMWAVE_L_SDK_06_01_00_01\examples\drivers\`
+1. **查看用户指南** - 搜索"Flash"、"persistent"、"calibration"关键词
+2. **检查CLI命令列表** - 查找flash相关命令
+3. **查看配置文件目录** - 是否有`*flash*.cfg`或`*Flash*.cfg`文件
+4. **查看源码** - 搜索`flash`、`QSPI`相关API调用
 
-所有驱动示例均包含以下两个版本：
-- `xwrL684x-evm\r5fss0-0_freertos\ti-arm-clang\*.release.appimage` (FreeRTOS版本)
-- `xwrL684x-evm\r5fss0-0_nortos\ti-arm-clang\*.release.appimage` (无操作系统版本)
+### 待验证的固件
 
-#### 启动加载器 (Boot)
-```
-drivers/boot/sbl/xwrL684x-evm/r5fss0-0_nortos/
-└── sbl.release.appimage                    ✅ 二级引导加载器
-drivers/boot/sbl_lite/xwrL684x-evm/r5fss0-0_nortos/
-└── sbl_lite.release.appimage               ✅ 精简版SBL
-drivers/boot/spibooting/xwrL684x-evm/
-├── r5fss0-0_freertos/spibooting.release.appimage
-└── r5fss0-0_nortos/spibooting.release.appimage
-```
+以下固件**可能**支持Flash配置，需要进一步验证：
 
-#### 通用输入输出 (GPIO)
-```
-drivers/gpio/gpio_led_blink/xwrL684x-evm/
-├── r5fss0-0_freertos/gpio_led_blink_main.release.appimage
-└── r5fss0-0_nortos/gpio_led_blink_main.release.appimage
-
-drivers/gpio/gpio_input_interrupt/xwrL684x-evm/
-├── r5fss0-0_freertos/gpio_input_interrupt.release.appimage
-└── r5fss0-0_nortos/gpio_input_interrupt.release.appimage
-```
-
-#### 串口通信 (UART)
-```
-drivers/uart/uart_echo/xwrL684x-evm/
-├── r5fss0-0_freertos/uart_echo.release.appimage
-├── r5fss0-0_nortos/uart_echo.release.appimage
-├── system_freertos/uart_echo_system.release.appimage     ✅ 系统级
-└── system_nortos/uart_echo_system.release.appimage
-
-drivers/uart/uart_echo_callback/xwrL684x-evm/
-├── r5fss0-0_freertos/uart_echo_callback.release.appimage
-├── r5fss0-0_nortos/uart_echo_callback.release.appimage
-├── system_freertos/uart_echo_callback_system.release.appimage
-└── system_nortos/uart_echo_callback_system.release.appimage
-
-drivers/uart/uart_echo_dma/xwrL684x-evm/
-├── r5fss0-0_freertos/uart_echo_dma.release.appimage
-├── r5fss0-0_nortos/uart_echo_dma.release.appimage
-├── system_freertos/uart_echo_dma_system.release.appimage
-└── system_nortos/uart_echo_dma_system.release.appimage
-```
-
-#### SPI通信 (MCSPI)
-```
-drivers/mcspi/mcspi_loopback/xwrL684x-evm/
-├── r5fss0-0_freertos/mcspi_loopback_main.release.appimage
-└── r5fss0-0_nortos/mcspi_loopback_main.release.appimage
-
-drivers/mcspi/mcspi_loopback_dma/xwrL684x-evm/
-├── r5fss0-0_freertos/mcspi_loopback_dma_main.release.appimage
-└── r5fss0-0_nortos/mcspi_loopback_dma_main.release.appimage
-```
-
-#### I2C通信
-```
-drivers/i2c/i2c_read/xwrL684x-evm/
-├── r5fss0-0_freertos/i2c_read.release.appimage
-└── r5fss0-0_nortos/i2c_read.release.appimage
-
-drivers/i2c/i2c_temperature/xwrL684x-evm/
-├── r5fss0-0_freertos/i2c_temperature.release.appimage
-└── r5fss0-0_nortos/i2c_temperature.release.appimage
-```
-
-#### CAN总线 (MCAN)
-```
-drivers/mcan/mcan_loopback_polling/xwrL684x-evm/
-├── r5fss0-0_freertos/mcan_loopback_polling.release.appimage
-└── r5fss0-0_nortos/mcan_loopback_polling.release.appimage
-
-drivers/mcan/mcan_loopback_interrupt/xwrL684x-evm/
-├── r5fss0-0_freertos/mcan_loopback_interrupt.release.appimage
-└── r5fss0-0_nortos/mcan_loopback_interrupt.release.appimage
-
-drivers/mcan/mcan_external_read_write/xwrL684x-evm/
-├── r5fss0-0_freertos/mcan_external_read_write.release.appimage
-└── r5fss0-0_nortos/mcan_external_read_write.release.appimage
-```
-
-#### LIN总线
-```
-drivers/lin/lin_loopback_polling/xwrL684x-evm/
-├── r5fss0-0_freertos/lin_loopback_polling.release.appimage
-└── r5fss0-0_nortos/lin_loopback_polling.release.appimage
-
-drivers/lin/lin_loopback_interrupts/xwrL684x-evm/
-├── r5fss0-0_freertos/lin_loopback_interrupt.release.appimage
-└── r5fss0-0_nortos/lin_loopback_interrupt.release.appimage
-
-drivers/lin/lin_external/xwrL684x-evm/
-├── r5fss0-0_freertos/lin_external.release.appimage
-└── r5fss0-0_nortos/lin_external.release.appimage
-
-drivers/lin/lin_external_responder_interrupts/xwrL684x-evm/
-├── r5fss0-0_freertos/lin_external_responder_interrupts.release.appimage
-└── r5fss0-0_nortos/lin_external_responder_interrupts.release.appimage
-
-drivers/lin/lin_sci_dma/xwrL684x-evm/
-├── r5fss0-0_freertos/lin_sci_dma.release.appimage
-└── r5fss0-0_nortos/lin_sci_dma.release.appimage
-
-drivers/lin/lin_sci_loopback/xwrL684x-evm/
-├── r5fss0-0_freertos/lin_sci_loopback.release.appimage
-└── r5fss0-0_nortos/lin_sci_loopback.release.appimage
-```
-
-#### DMA传输 (EDMA)
-```
-drivers/edma/edma_polled_transfer/xwrL684x-evm/
-├── r5fss0-0_freertos/edma_polled_transfer.release.appimage
-├── r5fss0-0_nortos/edma_polled_transfer.release.appimage
-├── system_freertos/edma_polled_transfer_system.release.appimage
-└── system_nortos/edma_polled_transfer_system.release.appimage
-
-drivers/edma/edma_interrupt_transfer/xwrL684x-evm/
-├── r5fss0-0_freertos/edma_interrupt_transfer.release.appimage
-├── r5fss0-0_nortos/edma_interrupt_transfer.release.appimage
-├── system_freertos/edma_interrupt_transfer_system.release.appimage
-└── system_nortos/edma_interrupt_transfer_system.release.appimage
-
-drivers/edma/edma_chain_transfer/xwrL684x-evm/
-├── r5fss0-0_freertos/edma_chain_transfer.release.appimage
-├── r5fss0-0_nortos/edma_chain_transfer.release.appimage
-├── system_freertos/edma_chain_transfer_system.release.appimage
-└── system_nortos/edma_chain_transfer_system.release.appimage
-
-drivers/edma/edma_link_transfer/xwrL684x-evm/
-├── r5fss0-0_freertos/edma_link_transfer.release.appimage
-├── r5fss0-0_nortos/edma_link_transfer.release.appimage
-├── system_freertos/edma_link_transfer_system.release.appimage
-└── system_nortos/edma_link_transfer_system.release.appimage
-```
-
-#### 硬件加速器 (HWA)
-```
-drivers/hwa/hwa_cfar_ca/xwrL684x-evm/
-├── r5fss0-0_freertos/hwa_cfar_ca.release.appimage
-├── r5fss0-0_nortos/hwa_cfar_ca.release.appimage
-├── system_freertos/hwa_cfar_ca_system.release.appimage
-└── system_nortos/hwa_cfar_ca_system.release.appimage
-
-drivers/hwa/hwa_cfar_os/xwrL684x-evm/
-├── r5fss0-0_freertos/hwa_cfar_os.release.appimage
-├── r5fss0-0_nortos/hwa_cfar_os.release.appimage
-├── system_freertos/hwa_cfar_os_system.release.appimage
-└── system_nortos/hwa_cfar_os_system.release.appimage
-
-drivers/hwa/hwa_real_fft/xwrL684x-evm/
-├── r5fss0-0_freertos/hwa_real_fft.release.appimage
-├── r5fss0-0_nortos/hwa_real_fft.release.appimage
-├── system_freertos/hwa_real_fft_system.release.appimage
-└── system_nortos/hwa_real_fft_system.release.appimage
-
-drivers/hwa/hwa_dc_sub/xwrL684x-evm/
-├── r5fss0-0_freertos/hwa_dc_sub.release.appimage
-├── r5fss0-0_nortos/hwa_dc_sub.release.appimage
-├── system_freertos/hwa_dc_sub_system.release.appimage
-└── system_nortos/hwa_dc_sub_system.release.appimage
-
-drivers/hwa/hwa_compression/xwrL684x-evm/
-├── r5fss0-0_freertos/hwa_compression.release.appimage
-├── r5fss0-0_nortos/hwa_compression.release.appimage
-├── system_freertos/hwa_compression_system.release.appimage
-└── system_nortos/hwa_compression_system.release.appimage
-```
-
-#### QSPI Flash
-```
-drivers/qspi/qspi_flash_diag/xwrL684x-evm/
-├── r5fss0-0_freertos/qspi_flash_diag.release.appimage
-└── r5fss0-0_nortos/qspi_flash_diag.release.appimage
-
-drivers/qspi/qspi_flash_transfer/xwrL684x-evm/
-├── r5fss0-0_freertos/qspi_flash_transfer.release.appimage
-└── r5fss0-0_nortos/qspi_flash_transfer.release.appimage
-
-drivers/qspi/qspi_flash_dma_transfer/xwrL684x-evm/
-├── r5fss0-0_freertos/qspi_flash_dma_transfer.release.appimage
-└── r5fss0-0_nortos/qspi_flash_dma_transfer.release.appimage
-```
-
-#### 其他外设
-```
-drivers/cbuff/cbuff_sw_trigger/xwrL684x-evm/
-├── r5fss0-0_freertos/cbuff_sw_trigger.release.appimage
-└── r5fss0-0_nortos/cbuff_sw_trigger.release.appimage
-
-drivers/crc/crc_16bit/xwrL684x-evm/
-├── r5fss0-0_freertos/crc_16bit.release.appimage
-└── r5fss0-0_nortos/crc_16bit.release.appimage
-
-drivers/crc/crc_full_cpu/xwrL684x-evm/
-├── r5fss0-0_freertos/crc_full_cpu.release.appimage
-└── r5fss0-0_nortos/crc_full_cpu.release.appimage
-
-drivers/epwm/epwm_duty_cycle/xwrL684x-evm/
-├── r5fss0-0_freertos/epwm_duty_cycle.release.appimage
-└── r5fss0-0_nortos/epwm_duty_cycle.release.appimage
-
-drivers/rti/rti_led_blink/xwrL684x-evm/
-├── r5fss0-0_freertos/rti_led_blink.release.appimage
-└── r5fss0-0_nortos/rti_led_blink.release.appimage
-
-drivers/watchdog/watchdog_interrupt/xwrL684x-evm/
-├── r5fss0-0_freertos/watchdog_interrupt_mode.release.appimage
-└── r5fss0-0_nortos/watchdog_interrupt_mode.release.appimage
-
-drivers/watchdog/watchdog_reset/xwrL684x-evm/
-├── r5fss0-0_freertos/watchdog_reset_mode.release.appimage
-└── r5fss0-0_nortos/watchdog_reset_mode.release.appimage
-
-drivers/pmic/pmic_device_ID/xwrL684x-evm/
-├── r5fss0-0_freertos/pmic_device_ID.release.appimage
-└── r5fss0-0_nortos/pmic_device_ID.release.appimage
-
-drivers/power/power_modes/xwrL684x-evm/
-└── r5fss0-0_freertos/power_modes.release.appimage
-
-drivers/sharedmemory/xwrL684x-evm/
-├── r5fss0-0_freertos/shared_memory.release.appimage
-└── r5fss0-0_nortos/shared_memory.release.appimage
-
-drivers/soc/warmreset/xwrL684x-evm/
-├── r5fss0-0_freertos/Warm_Reset.release.appimage
-└── r5fss0-0_nortos/Warm_Reset.release.appimage
-
-drivers/ipc/ipc_notify_echo/xwrL684x-evm/
-├── r5fss0-0_freertos/ipc_notify_echo.release.appimage
-├── r5fss0-0_nortos/ipc_notify_echo.release.appimage
-├── system_freertos/ipc_notify_echo_system.release.appimage
-└── system_nortos/ipc_notify_echo_system.release.appimage
-```
+| 固件 | 路径 | 待验证内容 |
+|------|------|-----------|
+| mmWave Demo | `MMWAVE_L_SDK_06_01_00_01\examples\mmw_demo` | 是否支持Flash配置 |
+| CAN Integration | `radar_toolbox_3_30_00_06\...\CAN_Integration` | 是否支持Flash配置 |
 
 ---
 
-### 🧠 内核示例固件 (Kernel)
+## 📝 配置文件格式说明
 
-**基础路径**: `C:\ti\MMWAVE_L_SDK_06_01_00_01\examples\kernel\`
+### .cfg文件结构
 
-#### DPL (驱动程序库)
-```
-kernel/dpl/dpl_demo/xwrL684x-evm/
-├── r5fss0-0_freertos/dpl_demo.release.appimage
-├── r5fss0-0_nortos/dpl_demo.release.appimage
-├── system_freertos/dpl_demo_system.release.appimage
-└── system_nortos/dpl_demo_system.release.appimage
+TI mmWave雷达配置文件是文本格式，包含一系列CLI命令：
+
+```cfg
+% 示例配置文件结构
+sensorStop
+flushCfg
+
+% 通道配置
+channelCfg 15 7 0
+
+% Chirp配置
+profileCfg 0 60 7 0 23.42 0 0 70 1 256 5209 0 0 158
+
+% 帧配置
+frameCfg 0 0 16 0 100 1 0
+
+% 启动传感器
+sensorStart
 ```
 
-#### FreeRTOS
-```
-kernel/freertos/posix_demo/xwrL684x-evm/
-├── r5fss0-0_freertos/posix_demo.release.appimage
-└── system_freertos/posix_demo_system.release.appimage
+### 关键配置命令
 
-kernel/freertos/task_switch/xwrL684x-evm/
-├── r5fss0-0_freertos/task_switch.release.appimage
-└── system_freertos/task_switch_system.release.appimage
+| 命令 | 功能 |
+|------|------|
+| `sensorStop` | 停止传感器 |
+| `flushCfg` | 清除当前配置 |
+| `channelCfg` | 配置TX/RX通道 |
+| `profileCfg` | 配置Chirp参数 |
+| `frameCfg` | 配置帧参数 |
+| `sensorStart` | 启动传感器 |
+
+### Flash相关命令（推测）
+
+基于xWR68xx的实现，AWRL6844可能使用类似命令：
+
+```bash
+# 保存配置到Flash
+saveConfig [slot_id]
+
+# 从Flash加载配置
+loadConfig [slot_id]
+
+# 保存校准数据
+saveCalibration
+
+# 加载校准数据
+loadCalibration
+
+# Flash擦除
+eraseFlash [address] [size]
 ```
+
+**⚠️ 注意**：这些命令需要在InCabin Demo文档中验证。
 
 ---
 
-### 📡 数据处理示例 (DataPath)
+## 🎯 推荐工作流程
 
-**基础路径**: `C:\ti\MMWAVE_L_SDK_06_01_00_01\examples\datapath\`
+### 开发阶段
 
-```
-datapath/aoa2dproc/xwrL684x-evm/
-├── r5fss0-0_freertos/aoa2dproc_test_main.release.appimage
-└── r5fss0-0_nortos/aoa2dproc_test_main.release.appimage
+1. **使用UART CLI配置** - 快速测试和调试
+2. **通过GUI工具验证** - 使用配套的可视化工具
+3. **记录最优配置** - 保存为.cfg文件
 
-datapath/cfarproc/xwrL684x-evm/
-├── r5fss0-0_freertos/cfarproc_test_main_xwrL68xx.release.appimage
-└── r5fss0-0_nortos/cfarproc_test_main_xwrL68xx.release.appimage
+### 部署阶段
 
-datapath/dopplerproc/xwrL684x-evm/
-├── r5fss0-0_freertos/dopplerproc_test_main.release.appimage
-└── r5fss0-0_nortos/dopplerproc_test_main.release.appimage
+1. **烧录固件** - 使用UniFlash烧录支持Flash的固件
+2. **配置参数** - 通过UART发送配置
+3. **保存到Flash** - 使用saveConfig命令
+4. **验证** - 断电重启，确认自动加载
 
-datapath/rangeproc/xwrL684x-evm/
-├── r5fss0-0_freertos/rangeproc_test_main_xwrL68xx.release.appimage
-└── r5fss0-0_nortos/rangeproc_test_main_xwrL68xx.release.appimage
-```
+### 生产阶段
 
----
-
-### ⚙️ 控制示例 (Control)
-
-**基础路径**: `C:\ti\MMWAVE_L_SDK_06_01_00_01\examples\control\`
-
-```
-control/lut/xwrL684x-evm/r5fss0-0_freertos/
-└── lut_example.release.appimage
-
-control/mmwave/xwrL684x-evm/r5fss0-0_freertos/
-└── mmwave_example.release.appimage
-```
-
----
-
-### 🌟 基础模板固件
-
-**基础路径**: `C:\ti\MMWAVE_L_SDK_06_01_00_01\examples\`
-
-```
-hello_world/xwrL684x-evm/
-├── r5fss0-0_freertos/hello_world.release.appimage
-├── r5fss0-0_nortos/hello_world.release.appimage
-├── system_freertos/hello_world_system.release.appimage      ✅ 推荐
-└── system_nortos/hello_world_system.release.appimage
-
-empty/xwrL684x-evm/
-├── r5fss0-0_freertos/empty.release.appimage
-├── r5fss0-0_nortos/empty.release.appimage
-├── system_freertos/empty_system.release.appimage
-└── system_nortos/empty_system.release.appimage
-```
-
----
-
-## 📊 固件统计
-
-### 总数统计
-
-| 类别 | FreeRTOS版本 | No-RTOS版本 | System版本 | 小计 |
-|------|--------------|-------------|------------|------|
-| **mmWave Demo** | 2 | 0 | 0 | 2 |
-| **应用Demo** | 2 | 0 | 0 | 2 |
-| **驱动示例** | 50+ | 50+ | 20+ | 120+ |
-| **内核示例** | 5+ | 3+ | 5+ | 13+ |
-| **数据处理** | 4 | 4 | 0 | 8 |
-| **控制示例** | 2 | 0 | 0 | 2 |
-| **基础模板** | 2 | 2 | 2 | 6 |
-| **总计** | **67+** | **59+** | **27+** | **153+** |
-
-### SDK分布
-
-| SDK来源 | 固件数量 | 说明 |
-|---------|----------|------|
-| **MMWAVE_L_SDK_06_01_00_01** | 150+ | AWRL6844官方SDK |
-| **radar_toolbox_3_30_00_06** | 3 | Radar Toolbox应用固件 |
-| **总计** | **153+** | 所有可用固件 |
-
----
-
-## 🎯 使用指南
-
-### 选择固件的建议
-
-#### 🚀 快速开始
-1. **完全新手**: 使用 `hello_world_system.release.appimage`
-2. **雷达开发**: 使用 `mmwave_demo.release.appimage` ⭐
-3. **车内应用**: 使用 `demo_in_cabin_sensing_6844_system.release.appimage`
-4. **CAN通信**: 使用 `can_integration_example_L6844.appimage`
-
-#### 📝 版本选择
-- **FreeRTOS版本**: 适合需要操作系统调度的复杂应用
-- **No-RTOS版本**: 适合简单应用，资源占用少
-- **System版本**: 多核协同工作，适合复杂雷达应用 ⭐ 推荐
-
-#### 🔍 查找固件
-所有包含 `xwrL684x-evm` 或 `6844` 的 `.appimage` 文件都支持AWRL6844。
-
-### Flash配置读取功能
-
-目前已确认支持Flash配置读取的AWRL6844固件：
-
-#### ✅ **InCabin Demo** 
-- **固件**: `demo_in_cabin_sensing_6844_system.release.appimage`
-- **功能**: 
-  - 校准数据Flash存储
-  - 配置参数持久化
-  - 独立部署模式（烧录后无需PC）
-
-#### ⚠️ 其他固件
-- 大多数Demo固件通过UART CLI实时配置，不支持Flash配置读取
-- 如需Flash配置功能，可参考InCabin Demo源码进行定制开发
+1. **批量烧录** - 固件 + Flash配置一起烧录
+2. **出厂测试** - 验证独立运行功能
+3. **现场部署** - 设备可直接工作，无需配置
 
 ---
 
 ## 📚 相关资源
 
 ### 官方文档
-- **MMWAVE_L_SDK用户指南**: `C:\ti\MMWAVE_L_SDK_06_01_00_01\docs\`
-- **Radar Toolbox文档**: `C:\ti\radar_toolbox_3_30_00_06\docs\`
-- **mmWave Demo指南**: SDK中的 `mmw_demo` 文档
 
-### 开发工具
-- **CCS (Code Composer Studio)**: 固件开发IDE
-- **UniFlash**: 固件烧录工具
-- **mmWave Studio**: 雷达配置和测试工具
+| 文档 | 位置 |
+|------|------|
+| **InCabin Demo用户指南** | `radar_toolbox_3_30_00_06\...\AWRL6844_InCabin_Demos\docs\` |
+| **Flash编程指南** | 需在TI官网搜索 |
+| **QSPI Flash驱动** | `MMWAVE_L_SDK\...\drivers\qspi\` |
+
+### 工具
+
+| 工具 | 用途 |
+|------|------|
+| **UniFlash** | 固件和Flash数据烧录 |
+| **InCabin GUI** | 可视化配置和测试 |
+| **UART终端** | CLI命令交互（Tera Term、PuTTY等） |
+
+### 知识库文档
+
+```
+知识库/雷达模块/RADAR-TOOLBOX/radar_toolbox_3_30_00_06/
+├── source/ti/examples/Automotive_InCabin_Security_and_Safety/
+│   └── AWRL6844_InCabin_Demos/
+└── tools/visualizers/AWRL6844_Incabin_GUI/
+```
 
 ---
 
-**文档结束** 🎉
+## ❓ 待研究问题
+
+### 需要进一步确认
+
+- [ ] InCabin Demo的具体Flash CLI命令
+- [ ] Flash存储区域的地址映射
+- [ ] Flash数据格式和结构
+- [ ] 是否支持多配置槽位
+- [ ] 校准数据的存储位置和格式
+- [ ] 如何通过UniFlash预烧录配置
+
+### 研究方法
+
+1. 阅读`AWRL6844_InCabin_Demos_User_Guide.html`
+2. 查看固件源码（如果可用）
+3. 实际硬件测试
+4. 联系TI技术支持
+
+---
+
+## 📞 获取帮助
+
+如需更多信息：
+- 📖 查看知识库中的InCabin Demo文档
+- 🌐 访问TI E2E论坛
+- 📧 联系TI技术支持
+- 🔬 实际硬件测试验证
+
+---
+
+**文档状态**: 🚧 部分待验证  
+**下一步**: 实际测试InCabin Demo的Flash配置功能 🎯
